adding cy, id, it, mk, sq

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -186,8 +186,8 @@ ja:
     profile form errors:                        "以下のエラーが原因でプロフィールの更新ができませんでした:"
     email address:                              "メールアドレス:"
     user name:                                  "ユーザ名:"
-    agreement:                                  "YouVersion利用規約 %{terms_link} に同意します。"
-    terms and conditions:                       "規約と条件"
+    agreement:                                  "YouVersion%{terms_link} に同意します。"
+    terms and conditions:                       "利用規約"
     facebook sign up success:                   "すばらしい! Facebook の利用を許可しました。YouVersion でのユーザ名とパスワードを選択して、次へお進み下さい。"
     register:                                   "登録"
     thanks for registering:                     "ご登録ありがとうございます！"
