--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -49,7 +49,7 @@ tr:
   following:                                    "Takip ettikleri"
   highlight:                                    "Vurgu"
   bookmark:                                     "Yer İmi"
-  earned badge date:                            "%{username} tarafından %{ago} kazanıldı"
+  earned badge date:                            "%{username} tarafından %{ago} önce kazanıldı"
   badges title:                                 "Rozetler"
   currently selected:                           "Seçili Olanlar:"
   read reference:                               "Şunu Oku: %{reference}"
@@ -76,7 +76,7 @@ tr:
   sign in to youversion:                        "YouVersion'a giriş yap"
   remove:                                       "Sil"
   confirm danger:                               "Evet, eminim"
-  registered ago:                               "%{time_ago} kaydoldu"
+  registered ago:                               "%{time_ago} önce kaydoldu"
   version header:                               "Çeviri: %{version}"
   bible versions:                               "Kutsal Kitap Çevirileri"
   read this version:                            "Bu Çeviriyi Oku"
@@ -112,13 +112,13 @@ tr:
   next page:                                    "Sonraki Sayfa"
   previous page:                                "Önceki Sayfa"
   invalid username or password:                 "Kullancı adı veya parola geçersiz."
-  show all bookmarks:                           "Tüm %{total} yer imlerini görüntüle"
-  show all notes:                               "Tüm %{total} notları görüntüle"
+  show all bookmarks:                           " %{total} yer imlerinin tümünü görüntüle"
+  show all notes:                               "%{total} notların tümünü görüntüle"
   recent bookmarks:                             "En Yeni Yer İmleri"
   percentage display:                           "%{number}%"
   myself:                                       "Benim"
   none found:                                   "Girdiğiniz kriterlere göre hiç birşey bulunamadı.Arama kriterlerinizi genişletmeye deneyiniz"
-  paginated items shown:                        "Toplam %{total_available}% öğeden {first_shown}&ndash;%{last_shown}"
+  paginated items shown:                        "%{total_available}% öğeden {first_shown}&ndash;%{last_shown}"
   160 character limit:                          "En fazla 160 karekter"
   recent versions:                              "En Son Kullanılan"
   likes:
@@ -161,7 +161,7 @@ tr:
   ref:
     clear verses:                               "Seçili Ayetleri Sıfırla"
     choose book and chapter:                    "Kitap ve Bölüm Seçimi"
-    choose version:                             "Çeviriyi Seçimi"
+    choose version:                             "Çeviri Seçimi"
     choose second version:                      "İkinci Çeviri Seçimi"
     share:                                      "Paylaş"
     share now:                                  "Hemen Paylaş"
@@ -233,8 +233,8 @@ tr:
     user likes:                                 "%{user} — Beğendikleri"
     my badges:                                  "Rozetlerim"
     revised date:                               "En son %{date} tarihinde güncellenmiştir"
-    update email copy:                          "Yeni bir e-Posta adresini girdikten sonra e-Posta Adresimi Güncelle düğmesini tıklayınız. Yeni e-Posta adresinizi doğrulayabilmeniz için size bir link yollayacağız."
-    edit email:                                 "e-Posta Aresimi Güncelle"
+    update email copy:                          "Yeni bir e-Posta adresini girdikten sonra e-Posta Adresini Güncelle düğmesini tıklayınız. Yeni e-Posta adresinizi doğrulayabilmeniz için size bir link yollayacağız."
+    edit email:                                 "e-Posta Adresini Güncelle"
     update email check:                         "e-Posta'nıza, yeni adresiniz doğrulamak için bir mesaj yollanmıştır. O mesajdaki linki tıklayarak e-Posta adresinizi doğrulayın."
     confirm update email success:               "e-Posta adresiniz güncellenmiştir. Teşekkür ederiz!"
     confirm update email error:                 "e-Posta adres değişikliğiniz yapılırken bir hata oluştu. Özür dileriz."
@@ -354,15 +354,15 @@ tr:
       new password:                             "Yeni Parola"
       confirm password:                         "Parolayı Doğrula"
       avatar file:                              "Resminizi içeren bir dosya seçiniz"
-      avatar help:                              "Resimler JPG, PNG veya GIF formatında ve en fazla 1MB boyutunda olmalıdır. Resminiz yüklenince, 48x48 piksellik büyüklüğünde bir resime dönüştürülecektir."
+      avatar help:                              "Resimler JPG, PNG veya GIF formatında ve en fazla 1MB boyutunda olmalıdır. Resminiz yüklenince, 48x48 piksele boyutlandırılacaktır."
       picture error:                            "Resminizi yüklerken bir hata oldu."
-      picture_empty:                            "Please select a picture to upload"
+      picture_empty:                            "Yüklenecek bir resim seçiniz."
       picture_too_large:                        "Resmin boyutu 1 MB'den daha küçük olmalıdır."
       picture_invalid_type:                     "Resim JPG, PNG veya GIF formatında olmalıdır."
-      picture_creation form errors:             "The following error(s) prevented updating your picture:"
+      picture_creation form errors:             "Resiminizi güncellerken şu hata(lar) oluştu:"
       updated picture:                          "Resminiz başarıyla güncellendi!"
       updated notifications:                    "Bildirim ayarlarınız başarıyla güncellendi!"
-      notifications token error:                "Invalid token, please sign in to edit your notificaiton settings."
+      notifications token error:                "Geçersiz belirteç. Bilgilendirme ayarlarınızı değiştirmek için lütfen giriş yapınız."
       notification errors:                      "Bildirimleriniz güncellemeye çalışırken şu hata(lar) oluştu:"
       edit:                                     "Düzenle"
       bio:                                      "Biyografi"
@@ -371,10 +371,10 @@ tr:
       error:                                    "Parolanızı değiştirirken bir hata oluştu. Özür Dileriz."
       old was invalid:                          "Parolanızı değiştirebilmek için eski parolanızı düzgün bir şekilde girmeniz gerekir."
     notifications:
-      badges:                                   "Rozet kazandığımda beni bilgilendir."
+      badges:                                   "Rozet kazandığımda bana bildir."
       follower:                                 "Birisi beni takip ettiğinde bana bildir."
       newsletter:                               "YouVersion duyurularını bana gönder."
-      note_like:                                "Birisi notlarımı beğenirse beni bilgilendir."
+      note_like:                                "Birisi notlarımı beğenirse bana bildir."
       reading_plans:                            "Kullanmaya başladığım okuma planları hakkında bilgilendir."
       publishing partners:                      "YouVersion'ın içerik sunan ortakları hakkında beni devamlı olarak bilgilendirin."
       update:                                   "Bildirimleri Güncelle"
@@ -418,7 +418,7 @@ tr:
     about publisher:                            "Yayıncı Hakkında"
     overview:                                   "Okuma Planına Genel Bakış"
     start:                                      "Okuma Planına Başla"
-    length field:                               "Okuma Planı Uzunluğu:"
+    length field:                               "Okuma Planın Uzunluğu:"
     view sample:                                "Örnek Metin Okuyun"
     users subscribed:                           "Bu Okuma Planını Okuyan %{user_count} Kullanıcı Var"
     more info:                                  "Daha Bilgi"
@@ -445,7 +445,7 @@ tr:
     no content:                                 "Okuma planınızda bugün için içerik bulunmuyor. Planınız tamamlanmış olarak işaretlendi."
     read today:                                 "Profilim"
     completion status _ below percentage:       "Tamamlandı"
-    current progress html:                      "Toplam <b>%{total_days}</b> günden <b>%{day}.</b> gün"
+    current progress html:                      "<b>%{total_days}</b> günden <b>%{day}.</b> gün"
     start date _ before date string:            "Başlangıç Tarihi:"
     end date _ before date string:              "Son Tarihi:"
     are you behind:                             "Geride kaldınız mı?"
@@ -454,14 +454,14 @@ tr:
     catch up description only:                  "Günlük okumanızda geri kalırsanız, kaygılanmayın! Bugünün okumasını istediğinizde en son bitirdiğiniz günlük okuması ile eşitleyebilirsiniz."
     catch me up:                                "Bugünü Yakala"
     restart description:                        "İsterseniz, planınıza yeniden başlayabilirsiniz. İlerlemeniz ve okuma tarihiniz sıfırlanacak ve baştan başlayacaksınız."
-    restart:                                    "Okuma Planına Yeniden Başla"
+    restart:                                    "Yeniden Başla"
     privacy description:                        "İsterseniz, başkalarına bu okuma planın kullandığınızı gösterebilirsiniz. Bunu yapmak ister misiniz?"
     make private:                               "Özelleştir"
     make public:                                "Herkese Açık konuma getir"
     privacy title:                              "Gizlilik"
-    stop reading:                               "Planı Okuma Artık"
+    stop reading:                               "Planı Okumaktan Vazgeç"
     accountability:                             "Sorumluluk Desteği"
-    email reminder to me:                       "Günlük hatırlatmalarını e-Posta adresime (%{email_address}) gönder."
+    email reminder to me:                       "Günlük hatırlatmaları e-Posta adresime (%{email_address}) gönder."
     email weekly report to a friend:            "Bir(kaç) YouVersion üyelerine haftalık rapor gönder."
     calendar:                                   "Takvim"
     search members placeholder:                 "YouVersion Üyesini Bul"
@@ -494,7 +494,7 @@ tr:
     catch up successful:                        "Günlük okumanızı yakaladınız!"
     restart successful:                         "kuma Planınıza başından yeniden başladınız."
     subscribe successful:                       "Muhteşem! Bu Okuma Planına abonesiniz"
-    which day in plan:                          "Toplam %{total} günden %{day}. gün"
+    which day in plan:                          "%{total} günden %{day}. gün"
     must start to complete:                     "Okuma ilerlemenizi kaydedebilmek için bu okuma planına başlayın."
   registration:
     with facebook:                              "Facebook Kimliğini Kullanarak Kaydol"
